INT-12580: fix overflow on messaging users in moodlerooms reports

--- a/scss/_joule.scss
+++ b/scss/_joule.scss
@@ -11,11 +11,23 @@
         margin-top: 0;
     }
 }
-
+// -------------------------
+// Moodlerooms reports
+// -------------------------
 #block-reports-useraction-dragbox {
     background-color: $modal-backdrop-bg;
     border: 1px solid rgba(0,0,0,.2);
 }
+
+#block-reports-useraction-content {
+    overflow: scroll;
+}
+
+#block-reports-useraction-content .useraction-users {
+    overflow: visible;
+    height: auto;
+}
+
 #block-reports-useraction-msgtable tr td{
     display: block;
     width: 100%;
@@ -23,6 +35,7 @@
 
 #block-reports-useraction-msgtable textarea {
     width: 100%;
+    height: 150px;
 }
 
 #block-reports-useraction-msgtable td:first-child {
